--- a/package.json
+++ b/package.json
@@ -3,96 +3,95 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.1",
-    "@vaadin/a11y-base": "24.1.4",
-    "@vaadin/accordion": "24.1.4",
-    "@vaadin/app-layout": "24.1.4",
-    "@vaadin/avatar": "24.1.4",
-    "@vaadin/avatar-group": "24.1.4",
-    "@vaadin/board": "24.1.4",
-    "@vaadin/bundles": "24.1.4",
-    "@vaadin/button": "24.1.4",
-    "@vaadin/charts": "24.1.4",
-    "@vaadin/checkbox": "24.1.4",
-    "@vaadin/checkbox-group": "24.1.4",
-    "@vaadin/combo-box": "24.1.4",
+    "@vaadin/a11y-base": "24.2.0-alpha14",
+    "@vaadin/accordion": "24.2.0-alpha14",
+    "@vaadin/app-layout": "24.2.0-alpha14",
+    "@vaadin/avatar": "24.2.0-alpha14",
+    "@vaadin/avatar-group": "24.2.0-alpha14",
+    "@vaadin/board": "24.2.0-alpha14",
+    "@vaadin/bundles": "24.2.0-alpha14",
+    "@vaadin/button": "24.2.0-alpha14",
+    "@vaadin/charts": "24.2.0-alpha14",
+    "@vaadin/checkbox": "24.2.0-alpha14",
+    "@vaadin/checkbox-group": "24.2.0-alpha14",
+    "@vaadin/combo-box": "24.2.0-alpha14",
     "@vaadin/common-frontend": "0.0.18",
-    "@vaadin/component-base": "24.1.4",
-    "@vaadin/confirm-dialog": "24.1.4",
-    "@vaadin/context-menu": "24.1.4",
-    "@vaadin/cookie-consent": "24.1.4",
-    "@vaadin/crud": "24.1.4",
-    "@vaadin/custom-field": "24.1.4",
-    "@vaadin/date-picker": "24.1.4",
-    "@vaadin/date-time-picker": "24.1.4",
-    "@vaadin/details": "24.1.4",
-    "@vaadin/dialog": "24.1.4",
-    "@vaadin/email-field": "24.1.4",
-    "@vaadin/field-base": "24.1.4",
-    "@vaadin/field-highlighter": "24.1.4",
-    "@vaadin/form-layout": "24.1.4",
-    "@vaadin/grid": "24.1.4",
-    "@vaadin/grid-pro": "24.1.4",
-    "@vaadin/horizontal-layout": "24.1.4",
-    "@vaadin/icon": "24.1.4",
-    "@vaadin/icons": "24.1.4",
-    "@vaadin/input-container": "24.1.4",
-    "@vaadin/integer-field": "24.1.4",
-    "@vaadin/item": "24.1.4",
-    "@vaadin/list-box": "24.1.4",
-    "@vaadin/lit-renderer": "24.1.4",
-    "@vaadin/login": "24.1.4",
-    "@vaadin/map": "24.1.4",
-    "@vaadin/menu-bar": "24.1.4",
-    "@vaadin/message-input": "24.1.4",
-    "@vaadin/message-list": "24.1.4",
-    "@vaadin/multi-select-combo-box": "24.1.4",
-    "@vaadin/notification": "24.1.4",
-    "@vaadin/number-field": "24.1.4",
-    "@vaadin/overlay": "24.1.4",
-    "@vaadin/password-field": "24.1.4",
-    "@vaadin/polymer-legacy-adapter": "24.1.4",
-    "@vaadin/progress-bar": "24.1.4",
-    "@vaadin/radio-group": "24.1.4",
-    "@vaadin/rich-text-editor": "24.1.4",
+    "@vaadin/component-base": "24.2.0-alpha14",
+    "@vaadin/confirm-dialog": "24.2.0-alpha14",
+    "@vaadin/context-menu": "24.2.0-alpha14",
+    "@vaadin/cookie-consent": "24.2.0-alpha14",
+    "@vaadin/crud": "24.2.0-alpha14",
+    "@vaadin/custom-field": "24.2.0-alpha14",
+    "@vaadin/date-picker": "24.2.0-alpha14",
+    "@vaadin/date-time-picker": "24.2.0-alpha14",
+    "@vaadin/details": "24.2.0-alpha14",
+    "@vaadin/dialog": "24.2.0-alpha14",
+    "@vaadin/email-field": "24.2.0-alpha14",
+    "@vaadin/field-base": "24.2.0-alpha14",
+    "@vaadin/field-highlighter": "24.2.0-alpha14",
+    "@vaadin/form-layout": "24.2.0-alpha14",
+    "@vaadin/grid": "24.2.0-alpha14",
+    "@vaadin/grid-pro": "24.2.0-alpha14",
+    "@vaadin/horizontal-layout": "24.2.0-alpha14",
+    "@vaadin/icon": "24.2.0-alpha14",
+    "@vaadin/icons": "24.2.0-alpha14",
+    "@vaadin/input-container": "24.2.0-alpha14",
+    "@vaadin/integer-field": "24.2.0-alpha14",
+    "@vaadin/item": "24.2.0-alpha14",
+    "@vaadin/list-box": "24.2.0-alpha14",
+    "@vaadin/lit-renderer": "24.2.0-alpha14",
+    "@vaadin/login": "24.2.0-alpha14",
+    "@vaadin/map": "24.2.0-alpha14",
+    "@vaadin/menu-bar": "24.2.0-alpha14",
+    "@vaadin/message-input": "24.2.0-alpha14",
+    "@vaadin/message-list": "24.2.0-alpha14",
+    "@vaadin/multi-select-combo-box": "24.2.0-alpha14",
+    "@vaadin/notification": "24.2.0-alpha14",
+    "@vaadin/number-field": "24.2.0-alpha14",
+    "@vaadin/overlay": "24.2.0-alpha14",
+    "@vaadin/password-field": "24.2.0-alpha14",
+    "@vaadin/polymer-legacy-adapter": "24.2.0-alpha14",
+    "@vaadin/progress-bar": "24.2.0-alpha14",
+    "@vaadin/radio-group": "24.2.0-alpha14",
+    "@vaadin/rich-text-editor": "24.2.0-alpha14",
     "@vaadin/router": "1.7.5",
-    "@vaadin/scroller": "24.1.4",
-    "@vaadin/select": "24.1.4",
-    "@vaadin/side-nav": "24.1.4",
-    "@vaadin/split-layout": "24.1.4",
-    "@vaadin/tabs": "24.1.4",
-    "@vaadin/tabsheet": "24.1.4",
-    "@vaadin/text-area": "24.1.4",
-    "@vaadin/text-field": "24.1.4",
-    "@vaadin/time-picker": "24.1.4",
-    "@vaadin/tooltip": "24.1.4",
-    "@vaadin/upload": "24.1.4",
+    "@vaadin/scroller": "24.2.0-alpha14",
+    "@vaadin/select": "24.2.0-alpha14",
+    "@vaadin/side-nav": "24.2.0-alpha14",
+    "@vaadin/split-layout": "24.2.0-alpha14",
+    "@vaadin/tabs": "24.2.0-alpha14",
+    "@vaadin/tabsheet": "24.2.0-alpha14",
+    "@vaadin/text-area": "24.2.0-alpha14",
+    "@vaadin/text-field": "24.2.0-alpha14",
+    "@vaadin/time-picker": "24.2.0-alpha14",
+    "@vaadin/tooltip": "24.2.0-alpha14",
+    "@vaadin/upload": "24.2.0-alpha14",
     "@vaadin/vaadin-development-mode-detector": "2.0.6",
-    "@vaadin/vaadin-lumo-styles": "24.1.4",
-    "@vaadin/vaadin-material-styles": "24.1.4",
-    "@vaadin/vaadin-themable-mixin": "24.1.4",
+    "@vaadin/vaadin-lumo-styles": "24.2.0-alpha14",
+    "@vaadin/vaadin-material-styles": "24.2.0-alpha14",
+    "@vaadin/vaadin-themable-mixin": "24.2.0-alpha14",
     "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vertical-layout": "24.1.4",
-    "@vaadin/virtual-list": "24.1.4",
+    "@vaadin/vertical-layout": "24.2.0-alpha14",
+    "@vaadin/virtual-list": "24.2.0-alpha14",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.7.6",
+    "lit": "2.8.0",
     "mobile-drag-drop": "2.3.0-rc.2",
     "proj4": "2.9.0"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "5.0.2",
     "@rollup/pluginutils": "5.0.2",
-    "@vitejs/plugin-react": "4.0.0",
-    "async": "3.2.2",
-    "glob": "7.2.3",
-    "mkdirp": "1.0.4",
+    "@vitejs/plugin-react": "4.0.4",
+    "async": "3.2.4",
+    "glob": "10.3.3",
     "rollup-plugin-brotli": "3.1.0",
-    "rollup-plugin-visualizer": "5.9.0",
+    "rollup-plugin-visualizer": "5.9.2",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.0.4",
-    "vite": "4.3.9",
-    "vite-plugin-checker": "0.5.5",
+    "typescript": "5.1.6",
+    "vite": "4.4.9",
+    "vite-plugin-checker": "0.6.1",
     "workbox-build": "7.0.0",
     "workbox-core": "7.0.0",
     "workbox-precaching": "7.0.0"
@@ -178,100 +177,99 @@
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.1",
-      "@vaadin/a11y-base": "24.1.4",
-      "@vaadin/accordion": "24.1.4",
-      "@vaadin/app-layout": "24.1.4",
-      "@vaadin/avatar": "24.1.4",
-      "@vaadin/avatar-group": "24.1.4",
-      "@vaadin/board": "24.1.4",
-      "@vaadin/bundles": "24.1.4",
-      "@vaadin/button": "24.1.4",
-      "@vaadin/charts": "24.1.4",
-      "@vaadin/checkbox": "24.1.4",
-      "@vaadin/checkbox-group": "24.1.4",
-      "@vaadin/combo-box": "24.1.4",
+      "@vaadin/a11y-base": "24.2.0-alpha14",
+      "@vaadin/accordion": "24.2.0-alpha14",
+      "@vaadin/app-layout": "24.2.0-alpha14",
+      "@vaadin/avatar": "24.2.0-alpha14",
+      "@vaadin/avatar-group": "24.2.0-alpha14",
+      "@vaadin/board": "24.2.0-alpha14",
+      "@vaadin/bundles": "24.2.0-alpha14",
+      "@vaadin/button": "24.2.0-alpha14",
+      "@vaadin/charts": "24.2.0-alpha14",
+      "@vaadin/checkbox": "24.2.0-alpha14",
+      "@vaadin/checkbox-group": "24.2.0-alpha14",
+      "@vaadin/combo-box": "24.2.0-alpha14",
       "@vaadin/common-frontend": "0.0.18",
-      "@vaadin/component-base": "24.1.4",
-      "@vaadin/confirm-dialog": "24.1.4",
-      "@vaadin/context-menu": "24.1.4",
-      "@vaadin/cookie-consent": "24.1.4",
-      "@vaadin/crud": "24.1.4",
-      "@vaadin/custom-field": "24.1.4",
-      "@vaadin/date-picker": "24.1.4",
-      "@vaadin/date-time-picker": "24.1.4",
-      "@vaadin/details": "24.1.4",
-      "@vaadin/dialog": "24.1.4",
-      "@vaadin/email-field": "24.1.4",
-      "@vaadin/field-base": "24.1.4",
-      "@vaadin/field-highlighter": "24.1.4",
-      "@vaadin/form-layout": "24.1.4",
-      "@vaadin/grid": "24.1.4",
-      "@vaadin/grid-pro": "24.1.4",
-      "@vaadin/horizontal-layout": "24.1.4",
-      "@vaadin/icon": "24.1.4",
-      "@vaadin/icons": "24.1.4",
-      "@vaadin/input-container": "24.1.4",
-      "@vaadin/integer-field": "24.1.4",
-      "@vaadin/item": "24.1.4",
-      "@vaadin/list-box": "24.1.4",
-      "@vaadin/lit-renderer": "24.1.4",
-      "@vaadin/login": "24.1.4",
-      "@vaadin/map": "24.1.4",
-      "@vaadin/menu-bar": "24.1.4",
-      "@vaadin/message-input": "24.1.4",
-      "@vaadin/message-list": "24.1.4",
-      "@vaadin/multi-select-combo-box": "24.1.4",
-      "@vaadin/notification": "24.1.4",
-      "@vaadin/number-field": "24.1.4",
-      "@vaadin/overlay": "24.1.4",
-      "@vaadin/password-field": "24.1.4",
-      "@vaadin/polymer-legacy-adapter": "24.1.4",
-      "@vaadin/progress-bar": "24.1.4",
-      "@vaadin/radio-group": "24.1.4",
-      "@vaadin/rich-text-editor": "24.1.4",
+      "@vaadin/component-base": "24.2.0-alpha14",
+      "@vaadin/confirm-dialog": "24.2.0-alpha14",
+      "@vaadin/context-menu": "24.2.0-alpha14",
+      "@vaadin/cookie-consent": "24.2.0-alpha14",
+      "@vaadin/crud": "24.2.0-alpha14",
+      "@vaadin/custom-field": "24.2.0-alpha14",
+      "@vaadin/date-picker": "24.2.0-alpha14",
+      "@vaadin/date-time-picker": "24.2.0-alpha14",
+      "@vaadin/details": "24.2.0-alpha14",
+      "@vaadin/dialog": "24.2.0-alpha14",
+      "@vaadin/email-field": "24.2.0-alpha14",
+      "@vaadin/field-base": "24.2.0-alpha14",
+      "@vaadin/field-highlighter": "24.2.0-alpha14",
+      "@vaadin/form-layout": "24.2.0-alpha14",
+      "@vaadin/grid": "24.2.0-alpha14",
+      "@vaadin/grid-pro": "24.2.0-alpha14",
+      "@vaadin/horizontal-layout": "24.2.0-alpha14",
+      "@vaadin/icon": "24.2.0-alpha14",
+      "@vaadin/icons": "24.2.0-alpha14",
+      "@vaadin/input-container": "24.2.0-alpha14",
+      "@vaadin/integer-field": "24.2.0-alpha14",
+      "@vaadin/item": "24.2.0-alpha14",
+      "@vaadin/list-box": "24.2.0-alpha14",
+      "@vaadin/lit-renderer": "24.2.0-alpha14",
+      "@vaadin/login": "24.2.0-alpha14",
+      "@vaadin/map": "24.2.0-alpha14",
+      "@vaadin/menu-bar": "24.2.0-alpha14",
+      "@vaadin/message-input": "24.2.0-alpha14",
+      "@vaadin/message-list": "24.2.0-alpha14",
+      "@vaadin/multi-select-combo-box": "24.2.0-alpha14",
+      "@vaadin/notification": "24.2.0-alpha14",
+      "@vaadin/number-field": "24.2.0-alpha14",
+      "@vaadin/overlay": "24.2.0-alpha14",
+      "@vaadin/password-field": "24.2.0-alpha14",
+      "@vaadin/polymer-legacy-adapter": "24.2.0-alpha14",
+      "@vaadin/progress-bar": "24.2.0-alpha14",
+      "@vaadin/radio-group": "24.2.0-alpha14",
+      "@vaadin/rich-text-editor": "24.2.0-alpha14",
       "@vaadin/router": "1.7.5",
-      "@vaadin/scroller": "24.1.4",
-      "@vaadin/select": "24.1.4",
-      "@vaadin/side-nav": "24.1.4",
-      "@vaadin/split-layout": "24.1.4",
-      "@vaadin/tabs": "24.1.4",
-      "@vaadin/tabsheet": "24.1.4",
-      "@vaadin/text-area": "24.1.4",
-      "@vaadin/text-field": "24.1.4",
-      "@vaadin/time-picker": "24.1.4",
-      "@vaadin/tooltip": "24.1.4",
-      "@vaadin/upload": "24.1.4",
+      "@vaadin/scroller": "24.2.0-alpha14",
+      "@vaadin/select": "24.2.0-alpha14",
+      "@vaadin/side-nav": "24.2.0-alpha14",
+      "@vaadin/split-layout": "24.2.0-alpha14",
+      "@vaadin/tabs": "24.2.0-alpha14",
+      "@vaadin/tabsheet": "24.2.0-alpha14",
+      "@vaadin/text-area": "24.2.0-alpha14",
+      "@vaadin/text-field": "24.2.0-alpha14",
+      "@vaadin/time-picker": "24.2.0-alpha14",
+      "@vaadin/tooltip": "24.2.0-alpha14",
+      "@vaadin/upload": "24.2.0-alpha14",
       "@vaadin/vaadin-development-mode-detector": "2.0.6",
-      "@vaadin/vaadin-lumo-styles": "24.1.4",
-      "@vaadin/vaadin-material-styles": "24.1.4",
-      "@vaadin/vaadin-themable-mixin": "24.1.4",
+      "@vaadin/vaadin-lumo-styles": "24.2.0-alpha14",
+      "@vaadin/vaadin-material-styles": "24.2.0-alpha14",
+      "@vaadin/vaadin-themable-mixin": "24.2.0-alpha14",
       "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vertical-layout": "24.1.4",
-      "@vaadin/virtual-list": "24.1.4",
+      "@vaadin/vertical-layout": "24.2.0-alpha14",
+      "@vaadin/virtual-list": "24.2.0-alpha14",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.7.6",
+      "lit": "2.8.0",
       "mobile-drag-drop": "2.3.0-rc.2",
       "proj4": "2.9.0"
     },
     "devDependencies": {
       "@rollup/plugin-replace": "5.0.2",
       "@rollup/pluginutils": "5.0.2",
-      "@vitejs/plugin-react": "4.0.0",
-      "async": "3.2.2",
-      "glob": "7.2.3",
-      "mkdirp": "1.0.4",
+      "@vitejs/plugin-react": "4.0.4",
+      "async": "3.2.4",
+      "glob": "10.3.3",
       "rollup-plugin-brotli": "3.1.0",
-      "rollup-plugin-visualizer": "5.9.0",
+      "rollup-plugin-visualizer": "5.9.2",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.0.4",
-      "vite": "4.3.9",
-      "vite-plugin-checker": "0.5.5",
+      "typescript": "5.1.6",
+      "vite": "4.4.9",
+      "vite-plugin-checker": "0.6.1",
       "workbox-build": "7.0.0",
       "workbox-core": "7.0.0",
       "workbox-precaching": "7.0.0"
     },
-    "hash": "c24e213163995c9bfcbcf714f076e6b5a26141ec1145d51896fcaafd8ffd8bea"
+    "hash": "e528129cee845b3cf9d5e3a35723432539acd862d0cc17ef9c21f49bce5e5f3f"
   }
 }
