--- a/package.json
+++ b/package.json
@@ -3,41 +3,40 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@polymer/polymer": "3.5.2",
-    "@vaadin/bundles": "24.5.3",
+    "@vaadin/bundles": "24.7.1",
     "@vaadin/common-frontend": "0.0.19",
-    "@vaadin/polymer-legacy-adapter": "24.5.3",
-    "@vaadin/react-components": "24.5.3",
-    "@vaadin/react-components-pro": "24.5.3",
-    "@vaadin/router": "2.0.0",
+    "@vaadin/polymer-legacy-adapter": "24.7.1",
+    "@vaadin/react-components": "24.7.1",
+    "@vaadin/react-components-pro": "24.7.1",
     "@vaadin/vaadin-development-mode-detector": "2.0.7",
-    "@vaadin/vaadin-lumo-styles": "24.5.3",
-    "@vaadin/vaadin-material-styles": "24.5.3",
-    "@vaadin/vaadin-themable-mixin": "24.5.3",
+    "@vaadin/vaadin-lumo-styles": "24.7.1",
+    "@vaadin/vaadin-material-styles": "24.7.1",
+    "@vaadin/vaadin-themable-mixin": "24.7.1",
     "@vaadin/vaadin-usage-statistics": "2.1.3",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
     "lit": "3.2.1",
-    "proj4": "2.12.1",
+    "proj4": "2.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.28.0"
+    "react-router": "7.2.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "7.25.9",
-    "@preact/signals-react-transform": "0.4.0",
-    "@rollup/plugin-replace": "6.0.1",
-    "@rollup/pluginutils": "5.1.3",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "@vitejs/plugin-react": "4.3.3",
+    "@babel/preset-react": "7.26.3",
+    "@preact/signals-react-transform": "0.5.1",
+    "@rollup/plugin-replace": "6.0.2",
+    "@rollup/pluginutils": "5.1.4",
+    "@types/react": "18.3.18",
+    "@types/react-dom": "18.3.5",
+    "@vitejs/plugin-react": "4.3.4",
     "async": "3.2.6",
-    "glob": "10.4.5",
+    "glob": "11.0.1",
     "rollup-plugin-brotli": "3.1.0",
-    "rollup-plugin-visualizer": "5.12.0",
+    "rollup-plugin-visualizer": "5.14.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "5.6.3",
-    "vite": "5.4.11",
+    "typescript": "5.7.3",
+    "vite": "6.2.3",
     "vite-plugin-checker": "0.8.0",
     "workbox-build": "7.3.0",
     "workbox-core": "7.3.0",
@@ -49,7 +48,6 @@
     "@vaadin/vaadin-development-mode-detector": "$@vaadin/vaadin-development-mode-detector",
     "@vaadin/vaadin-lumo-styles": "$@vaadin/vaadin-lumo-styles",
     "@vaadin/vaadin-material-styles": "$@vaadin/vaadin-material-styles",
-    "@vaadin/router": "$@vaadin/router",
     "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
     "@vaadin/common-frontend": "$@vaadin/common-frontend",
     "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
@@ -61,53 +59,52 @@
     "@vaadin/react-components": "$@vaadin/react-components",
     "@vaadin/react-components-pro": "$@vaadin/react-components-pro",
     "react-dom": "$react-dom",
-    "react-router-dom": "$react-router-dom",
-    "react": "$react"
+    "react": "$react",
+    "react-router": "$react-router"
   },
   "vaadin": {
     "dependencies": {
       "@polymer/polymer": "3.5.2",
-      "@vaadin/bundles": "24.5.3",
+      "@vaadin/bundles": "24.7.1",
       "@vaadin/common-frontend": "0.0.19",
-      "@vaadin/polymer-legacy-adapter": "24.5.3",
-      "@vaadin/react-components": "24.5.3",
-      "@vaadin/react-components-pro": "24.5.3",
-      "@vaadin/router": "2.0.0",
+      "@vaadin/polymer-legacy-adapter": "24.7.1",
+      "@vaadin/react-components": "24.7.1",
+      "@vaadin/react-components-pro": "24.7.1",
       "@vaadin/vaadin-development-mode-detector": "2.0.7",
-      "@vaadin/vaadin-lumo-styles": "24.5.3",
-      "@vaadin/vaadin-material-styles": "24.5.3",
-      "@vaadin/vaadin-themable-mixin": "24.5.3",
+      "@vaadin/vaadin-lumo-styles": "24.7.1",
+      "@vaadin/vaadin-material-styles": "24.7.1",
+      "@vaadin/vaadin-themable-mixin": "24.7.1",
       "@vaadin/vaadin-usage-statistics": "2.1.3",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
       "lit": "3.2.1",
-      "proj4": "2.12.1",
+      "proj4": "2.15.0",
       "react": "18.3.1",
       "react-dom": "18.3.1",
-      "react-router-dom": "6.28.0"
+      "react-router": "7.2.0"
     },
     "devDependencies": {
-      "@babel/preset-react": "7.25.9",
-      "@preact/signals-react-transform": "0.4.0",
-      "@rollup/plugin-replace": "6.0.1",
-      "@rollup/pluginutils": "5.1.3",
-      "@types/react": "18.3.12",
-      "@types/react-dom": "18.3.1",
-      "@vitejs/plugin-react": "4.3.3",
+      "@babel/preset-react": "7.26.3",
+      "@preact/signals-react-transform": "0.5.1",
+      "@rollup/plugin-replace": "6.0.2",
+      "@rollup/pluginutils": "5.1.4",
+      "@types/react": "18.3.18",
+      "@types/react-dom": "18.3.5",
+      "@vitejs/plugin-react": "4.3.4",
       "async": "3.2.6",
-      "glob": "10.4.5",
+      "glob": "11.0.1",
       "rollup-plugin-brotli": "3.1.0",
-      "rollup-plugin-visualizer": "5.12.0",
+      "rollup-plugin-visualizer": "5.14.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "5.6.3",
-      "vite": "5.4.11",
+      "typescript": "5.7.3",
+      "vite": "6.2.3",
       "vite-plugin-checker": "0.8.0",
       "workbox-build": "7.3.0",
       "workbox-core": "7.3.0",
       "workbox-precaching": "7.3.0"
     },
-    "hash": "b703e8b30695e5aa2dd6a2c751333d353dc584ea2f57e50b662830b0ee70c459"
+    "hash": "79aa1da88023904562b90f1d958e6a9c23587178c77731a11fd28bb9a8216f5b"
   },
   "type": "module"
 }
